# earshot

./: README.md  pyproject.toml
earshot/: __init__.py  audio.py  backend.py  cli.py  config.py  icon.py  keys.py  notify.py  terminal.py  transcribe.py  tray.py
scripts/: install_linux.sh  linux.py  test_stt.py
src/: __init__.py  model.py  typing.py
